migrating to jpa impossible to maintain the amount of sql we are writing today ... it is not even ideal